Code Reference: prevent long text in the 'New in' section from triggering horizontal scroll bar
git-svn-id: https://meta.svn.wordpress.org/sites/trunk@615 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-developer/scss/main.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-developer/scss/main.scss
@@ -659,6 +659,7 @@
 	}
 	.reference-landing .box ul {
 		padding: 0;
+		overflow: hidden;
 	}
 
 	.three-columns .box {
